[gd_scene load_steps=27 format=2]

[ext_resource path="res://Interior.png" type="Texture" id=1]
[ext_resource path="res://Scene01.gd" type="Script" id=2]
[ext_resource path="res://images/DoorOpen.png" type="Texture" id=3]
[ext_resource path="res://Area2D.gd" type="Script" id=4]
[ext_resource path="res://DoorClosed.png" type="Texture" id=5]
[ext_resource path="res://TrashbagOpen_Trigger.gd" type="Script" id=6]
[ext_resource path="res://TrashbagOpen.png" type="Texture" id=7]
[ext_resource path="res://OpenTrashcan.png" type="Texture" id=8]
[ext_resource path="res://TrashCanLid_Trigger.gd" type="Script" id=9]
[ext_resource path="res://TrashcanLid.png" type="Texture" id=10]
[ext_resource path="res://images/the-full-kondo.png" type="Texture" id=11]
[ext_resource path="res://TrashbagClosed_Trigger.gd" type="Script" id=12]
[ext_resource path="res://TrashbagClosed.png" type="Texture" id=13]
[ext_resource path="res://images/DeleriousKid.png" type="Texture" id=14]
[ext_resource path="res://Cactus Reguar DFont.tres" type="DynamicFont" id=15]
[ext_resource path="res://Cactus Regular.tres" type="DynamicFontData" id=16]
[ext_resource path="res://SuccessLabel.gd" type="Script" id=17]
[ext_resource path="res://Retry_Trigger.gd" type="Script" id=18]
[ext_resource path="res://images/GameOverGirl.png" type="Texture" id=19]
[ext_resource path="res://GameOverGirl.gd" type="Script" id=20]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.9859, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 8.74519, 10.5 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=5]

size = 112
use_mipmaps = false
use_filter = false
font_data = ExtResource( 16 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 16.1798, 10 )

[node name="Scene01" type="Sprite"]

position = Vector2( -10, 0 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="DoorOpen" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 150, 280 )
texture = ExtResource( 3 )

[node name="DoorClosed_Trigger" type="Area2D" parent="." index="1"]

position = Vector2( 240, 260 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )

[node name="DoorClosed" type="Sprite" parent="DoorClosed_Trigger" index="0"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorClosed_Trigger" index="1"]

position = Vector2( 5, 9.05991e-006 )
scale = Vector2( 10.3846, 14.6154 )
shape = SubResource( 1 )

[node name="TrashbagOpen_Trigger" type="Area2D" parent="." index="2"]

editor/display_folded = true
visible = false
position = Vector2( 742, 290 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )

[node name="TrashbagOpen" type="Sprite" parent="TrashbagOpen_Trigger" index="0"]

texture = ExtResource( 7 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashbagOpen_Trigger" index="1"]

position = Vector2( -2, -25.75 )
scale = Vector2( 8.19231, 3.51923 )
shape = SubResource( 2 )

[node name="OpenTrashcan" type="Sprite" parent="." index="3"]

position = Vector2( 740, 380 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="TrashCanLid_Trigger" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 740, 280 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )

[node name="TrashcanLid" type="Sprite" parent="TrashCanLid_Trigger" index="0"]

texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashCanLid_Trigger" index="1"]

position = Vector2( 0, -10 )
scale = Vector2( 10.2914, 3.80952 )
shape = SubResource( 3 )

[node name="TrashcanLid2" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 615.053, 440.106 )
rotation = -0.251924
texture = ExtResource( 10 )
_sections_unfolded = [ "Visibility" ]

[node name="the-full-kondo" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 230, 300 )
scale = Vector2( 0.538938, 0.538938 )
texture = ExtResource( 11 )

[node name="TrashbagClosed_Trigger" type="Area2D" parent="." index="7"]

editor/display_folded = true
visible = false
position = Vector2( 580, 320 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 12 )

[node name="TrashbagClosed" type="Sprite" parent="TrashbagClosed_Trigger" index="0"]

position = Vector2( 20, -10 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashbagClosed_Trigger" index="1"]

position = Vector2( 20, 45 )
scale = Vector2( 12.3077, 11.9231 )
shape = SubResource( 4 )
disabled = true

[node name="DeleriousKid" type="Sprite" parent="." index="8"]

editor/display_folded = true
visible = false
position = Vector2( 351.909, 313.198 )
scale = Vector2( -1, 1 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]

[node name="TrashbagClosed" type="Sprite" parent="DeleriousKid" index="0"]

position = Vector2( 94.2256, -14.8463 )
scale = Vector2( 0.600593, 0.600593 )
texture = ExtResource( 13 )

[node name="LevelLabel" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
margin_right = 453.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="TidyText" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 540.0
margin_right = 733.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Does it spark filth?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="SuccessLabel" type="Label" parent="." index="11"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 180.0
margin_right = 784.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Feel the Joy!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 17 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Next_Trigger" type="Area2D" parent="SuccessLabel" index="0"]

position = Vector2( 280, 140 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 18 )

[node name="Next Label" type="Label" parent="SuccessLabel/Next_Trigger" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -70.0
margin_top = -30.0
margin_right = 98.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Continue!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SuccessLabel/Next_Trigger" index="1"]

position = Vector2( 10, -10 )
scale = Vector2( 5.5625, 2.42308 )
shape = SubResource( 6 )

[node name="GameOverGirl" type="Sprite" parent="." index="12"]

visible = false
texture = ExtResource( 19 )
centered = false
script = ExtResource( 20 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Retry_Trigger" type="Area2D" parent="GameOverGirl" index="0"]

position = Vector2( 490, 270 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 18 )

[node name="Retry Label" type="Label" parent="GameOverGirl/Retry_Trigger" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -30.0
margin_right = 79.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Retry?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverGirl/Retry_Trigger" index="1"]

position = Vector2( 10, -10 )
scale = Vector2( 5.5625, 2.42308 )
shape = SubResource( 6 )

[node name="GameOverLabel" type="Label" parent="GameOverGirl" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 120.0
margin_right = 734.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]


